--- a/Our great freedom fighters.html
+++ b/Our great freedom fighters.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div style="text-align:center; margin-top:40px;">
- <a style="padding-rigth: 20px;" href="file:///C:/Users/PC/Desktop/Our%20great%20freedom%20fighters.html#home">Home </a>
+ <a style="padding-rigth: 20px;" href="file:///C:/Users/PC/Desktop/Vashu/index.html">Home </a>
  <a style="padding-rigth: 20px; " href="file:///C:/Users/PC/Desktop/about.html"> About </a>
  <a style="padding-rigth: 20px; "href="file:///C:/Users/PC/Desktop/Contact.html"> Contact </a>
   <input type="text" placeholder="Search..">
